sources/libClangSharp/ClangSharp.h

enum CX_CastKind {
    CX_CK_Invalid,
#define CAST_OPERATION(Name) CX_CK_##Name,
#include <clang/AST/OperationKinds.def>
};
enum CX_CharacterKind {
    CX_CLK_Invalid,
    CX_CLK_Ascii = static_cast<int>(clang::CharacterLiteralKind::Ascii) + 1,
    CX_CLK_Wide = static_cast<int>(clang::CharacterLiteralKind::Wide) + 1,
    CX_CLK_UTF8 = static_cast<int>(clang::CharacterLiteralKind::UTF8) + 1,
    CX_CLK_UTF16 = static_cast<int>(clang::CharacterLiteralKind::UTF16) + 1,
    CX_CLK_UTF32 = static_cast<int>(clang::CharacterLiteralKind::UTF32) + 1,
};
enum CX_ConstexprSpecKind {
    CX_CSK_Invalid,
    CX_CSK_Unspecified = static_cast<int>(clang::ConstexprSpecKind::Unspecified) + 1,
    CX_CSK_Constexpr = static_cast<int>(clang::ConstexprSpecKind::Constexpr) + 1,
    CX_CSK_Consteval = static_cast<int>(clang::ConstexprSpecKind::Consteval) + 1,
    CX_CSK_Constinit = static_cast<int>(clang::ConstexprSpecKind::Constinit) + 1,
};
enum CX_ConstructionKind {
    _CX_CK_Invalid,
    CX_CK_Complete = static_cast<int>(clang::CXXConstructionKind::Complete) + 1,
    CX_CK_NonVirtualBase = static_cast<int>(clang::CXXConstructionKind::NonVirtualBase) + 1,
    CX_CK_VirtualBase = static_cast<int>(clang::CXXConstructionKind::VirtualBase) + 1,
    CX_CK_Delegating = static_cast<int>(clang::CXXConstructionKind::Delegating) + 1
};
enum CX_DeclKind {
    CX_DeclKind_Invalid,
#define DECL(DERIVED, BASE) CX_DeclKind_##DERIVED,
#define DECL_RANGE(BASE, START, END) CX_DeclKind_First##BASE = CX_DeclKind_##START, CX_DeclKind_Last##BASE = CX_DeclKind_##END,
#define LAST_DECL_RANGE(BASE, START, END) CX_DeclKind_First##BASE = CX_DeclKind_##START, CX_DeclKind_Last##BASE = CX_DeclKind_##END
#define ABSTRACT_DECL(DECL)
#include <clang/AST/DeclNodes.inc>
};
enum CX_ExprDependence {
    CX_ED_None = clang::ExprDependenceScope::None,
    CX_ED_UnexpandedPack = clang::ExprDependenceScope::UnexpandedPack,
    CX_ED_Instantiation = clang::ExprDependenceScope::Instantiation,
    CX_ED_Type = clang::ExprDependenceScope::Type,
    CX_ED_Value = clang::ExprDependenceScope::Value,
    CX_ED_Error = clang::ExprDependenceScope::Error,
    CX_ED_All = clang::ExprDependenceScope::All,

    CX_ED_TypeValue = clang::ExprDependenceScope::TypeValue,
    CX_ED_TypeInstantiation = clang::ExprDependenceScope::TypeInstantiation,
    CX_ED_ValueInstantiation = clang::ExprDependenceScope::ValueInstantiation,
    CX_ED_TypeValueInstantiation = clang::ExprDependenceScope::TypeValueInstantiation,
    CX_ED_ErrorDependent = clang::ExprDependenceScope::ErrorDependent,
};
enum CX_FloatingSemantics {
    CX_FLK_Invalid,
    CX_FLK_IEEEhalf = llvm::APFloatBase::S_IEEEhalf + 1,
    CX_FLK_BFloat = llvm::APFloatBase::S_BFloat + 1,
    CX_FLK_IEEEsingle = llvm::APFloatBase::S_IEEEsingle + 1,
    CX_FLK_IEEEdouble = llvm::APFloatBase::S_IEEEdouble + 1,
    CX_FLK_IEEEquad = llvm::APFloatBase::S_IEEEquad + 1,
    CX_FLK_PPCDoubleDouble = llvm::APFloatBase::S_PPCDoubleDouble + 1,
    CX_FLK_PPCDoubleDoubleLegacy = llvm::APFloatBase::S_PPCDoubleDoubleLegacy + 1,
    CX_FLK_Float8E5M2 = llvm::APFloatBase::S_Float8E5M2 + 1,
    CX_FLK_Float8E5M2FNUZ = llvm::APFloatBase::S_Float8E5M2FNUZ + 1,
    CX_FLK_Float8E4M3 = llvm::APFloatBase::S_Float8E4M3 + 1,
    CX_FLK_Float8E4M3FN = llvm::APFloatBase::S_Float8E4M3FN + 1,
    CX_FLK_Float8E4M3FNUZ = llvm::APFloatBase::S_Float8E4M3FNUZ + 1,
    CX_FLK_Float8E4M3B11FNUZ = llvm::APFloatBase::S_Float8E4M3B11FNUZ + 1,
    CX_FLK_Float8E3M4 = llvm::APFloatBase::S_Float8E3M4 + 1,
    CX_FLK_FloatTF32 = llvm::APFloatBase::S_FloatTF32 + 1,
    CX_FLK_Float8E8M0FNU = llvm::APFloatBase::S_Float8E8M0FNU + 1,
    CX_FLK_Float6E3M2FN = llvm::APFloatBase::S_Float6E3M2FN + 1,
    CX_FLK_Float6E2M3FN = llvm::APFloatBase::S_Float6E2M3FN + 1,
    CX_FLK_Float4E2M1FN = llvm::APFloatBase::S_Float4E2M1FN + 1,
    CX_FLK_x87DoubleExtended = llvm::APFloatBase::S_x87DoubleExtended + 1,
    CX_FLK_MaxSemantics = llvm::APFloatBase::S_MaxSemantics + 1,
};
enum CX_TypeTrait {
    CX_TT_Invalid,
#define TYPE_TRAIT_1(Spelling, Name, Key) CX_UTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_UTT_Last = 0 // CX_UTT_Last == last CX_UTT_XX in the enum.
#define TYPE_TRAIT_1(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_2(Spelling, Name, Key) CX_BTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_BTT_Last = CX_UTT_Last // CX_BTT_Last == last CX_BTT_XX in the enum.
#define TYPE_TRAIT_2(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_N(Spelling, Name, Key) CX_TT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_TT_Last = CX_BTT_Last // CX_TT_Last == last CX_TT_XX in the enum.
#define TYPE_TRAIT_N(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
};
enum CX_UnaryExprOrTypeTrait {
    CX_UETT_Invalid,
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #include "clang/Basic/TokenKinds.def"
    CX_UETT_Last = -1 // CX_UETT_Last == last CX_UETT_XX in the enum.
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #include "clang/Basic/TokenKinds.def"
};
enum CX_DestructorType {
    Deleting = clang::Dtor_Deleting,
    Complete = clang::Dtor_Complete,
    Base = clang::Dtor_Base,
    Comdat = clang::Dtor_Comdat
};
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCapturesVariable(CXCursor C, CXCursor V);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCaptureVariable(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_CastKind clangsharp_Cursor_getCastKind(CXCursor C);
CLANGSHARP_LINKAGE CX_CharacterKind clangsharp_Cursor_getCharacterLiteralKind(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCharacterLiteralValue(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getChild(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getComputationLhsType(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getComputationResultType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getConstraintExpr(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getConstructedBaseClass(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getConstructedBaseClassShadowDecl(CXCursor C);
CLANGSHARP_LINKAGE CX_ConstructionKind clangsharp_Cursor_getConstructionKind(CXCursor C);
CLANGSHARP_LINKAGE CX_ConstexprSpecKind clangsharp_Cursor_getConstexprKind(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getConstructsVirtualBase(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getContextParam(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getContextParamPosition(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCtor(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getCXXRecord_IsPOD(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getBoolLiteralValue(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getCookedLiteral(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getDeclaredReturnType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDeallocate(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getExceptionHandler(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getFallthroughHandler(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getFinalSuspendStmt(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDecl(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_DeclKind clangsharp_Cursor_getDeclKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDecomposedDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDefaultArg(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getDefaultArgType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDefinition(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDependentLambdaCallOperator(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDescribedCursorTemplate(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDescribedTemplate(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getDestructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getDoesNotEscape(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getDoesUsualArrayDeleteWantSize(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getEnumDeclPromotionType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getEnumerator(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getExpansionType(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_ExprDependence clangsharp_Cursor_getExprDependence(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getFieldIndex(CXCursor C);
CLANGSHARP_LINKAGE CX_FloatingSemantics clangsharp_Cursor_getFloatingLiteralSemantics(CXCursor C);
CLANGSHARP_LINKAGE double clangsharp_Cursor_getFloatingLiteralValueAsApproximateDouble(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getFoundDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getField(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getFriend(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getFriendDecl(CXCursor C);